default/objects/fHCM2__Policy__c/fields/Allow_Edit_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Allow_Edit_Feedback__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not Comments can be edited.</description>
    <inlineHelpText>Whether or not Comments can be edited.</inlineHelpText>
    <label>Allow Edit</label>
    <type>Checkbox</type>
</CustomField>