default/objects/fHCM2__Policy__c/fields/Conversations_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Conversations_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Conversations feature is enabled.</description>
    <inlineHelpText>Whether the Conversations feature is enabled.</inlineHelpText>
    <label>Conversations</label>
    <type>Checkbox</type>
</CustomField>