default/objects/fHCM2__Policy__c/fields/Objectives_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Objectives feature is enabled.</description>
    <inlineHelpText>Whether the Objectives feature is enabled.</inlineHelpText>
    <label>Objectives</label>
    <type>Checkbox</type>
</CustomField>